--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -297,6 +297,55 @@ h2, h3, h4 {
   text-decoration: none;
 }
 
+.contacts__container {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contacts__container > img {
+  width: 65%;
+}
+
+.payments {
+  width: 100%;
+  margin-top: 30px;
+  min-height: 25px;
+}
+
+.registration__container {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  margin-top: 30px;
+  align-items: center;
+}
+
+.registration__container > img {
+  width: 200px;
+}
+
+.registration__container > div > p {
+  margin-top: 0;
+}
+
+.support__container, .giris__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  gap: 30px;
+}
+
+.support__container > img, .giris__container > img {
+  width: 250px;
+}
+
+.support__container > p, .giris__container > div > p {
+  margin-top: 0;
+}
+
 @media (max-width: 1200px) {
   .footer {
 		padding: 10px 20px;
@@ -340,6 +389,10 @@ h2, h3, h4 {
   .main {
 		margin-top: 180px;
 	}
+
+  .contacts__container > img {
+    width: 60%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -447,5 +500,28 @@ h2, h3, h4 {
 
   .contacts {
     flex-direction: column;
+  }
+
+  .contacts__container {
+    flex-direction: column;
+  }
+
+  .contacts__container > ul {
+    align-self: flex-start;
+    margin-left: 20px;
+  }
+
+  .contacts__container > img {
+    width: 100%;
+  }
+
+  .registration__container, .support__container, .giris__container {
+    flex-direction: column;
+  }
+
+  .registration__container > img {
+    width: 50%;
+    max-width: 300px;
+    min-width: 250px;
   }
 }
