--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -49,6 +49,14 @@ body {
   padding-bottom: 20px;
 }
 
+.bonusları__table td {
+  border: 3px solid #C625AC;
+}
+
+.bonusları__table {
+  border: none;
+}
+
 .header__logo {
 	min-width: 170px;
 	width: 100%;
@@ -108,6 +116,14 @@ body {
 	color: #affc80;
 }
 
+.center_image {
+  width: 70%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 30px;
+}
+
 .header__menu ul li {
 	position: relative;
 	margin: 0 10px 20px;
@@ -126,7 +142,7 @@ body {
 	margin-right: 224px;
 }
 
-.main-title {
+h1, h2, h3 {
 	font-size: 36px;
 	font-weight: 700;
 }
@@ -137,7 +153,7 @@ body {
   color: #119F4C;
 }
 
-.main__paragraph {
+main > p {
 	line-height: 32px;
 	margin-top: 30px;
 	font-size: 18px;
@@ -157,8 +173,9 @@ body {
   list-style-type: disc;
 }
 
-.table {
+table {
   color: black;
+  border-collapse: collapse;
   display: flex;
   flex-direction: column;
   margin-top: 34px;
@@ -166,14 +183,26 @@ body {
 	overflow: auto;
 }
 
-.table-row:last-of-type {
+table tr:last-of-type {
 	border-bottom: none;
 }
 
-.table-row {
+table:not(.bonusları__table) tr {
 	min-width: 650px;
   display: flex;
   align-items: center;
+  font-weight: 400;
+  border-bottom: 3px solid #C625AC;
+}
+
+table:not(.bonusları__table) tr:last-of-type {
+  border-bottom: none;
+}
+
+.bonusları__table tr {
+  min-width: 650px;
+  align-items: center;
+  width: 100%;
   font-weight: 400;
   border-bottom: 3px solid #C625AC;
 }
@@ -208,6 +237,14 @@ body {
 .first-table-title {
   width: 290px;
   min-width: 290px;
+}
+
+.bonusları__table > tbody > tr > .table-description {
+  width: 100%;
+}
+
+.bonusları__table > tbody > tr > .table-title {
+  min-width: 200px;
 }
 
 .table-description {
@@ -330,7 +367,7 @@ h2, h3, h4 {
   margin-top: 0;
 }
 
-.support__container, .giris__container {
+.support__container, .giris__container, .image__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -344,6 +381,14 @@ h2, h3, h4 {
 
 .support__container > p, .giris__container > div > p {
   margin-top: 0;
+}
+
+.destek {
+  width: 300px;
+}
+
+.last__table__element {
+  width: 33%;
 }
 
 @media (max-width: 1200px) {
@@ -393,12 +438,20 @@ h2, h3, h4 {
   .contacts__container > img {
     width: 60%;
   }
+
+  .destek__container {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 768px) {
 	.header__menu {
 		min-height: 50px;
 	}
+
+  .destek {
+    width: 250px;
+  }
 
   .header__menu ul {
 		display: inline-flex;
@@ -511,11 +564,11 @@ h2, h3, h4 {
     margin-left: 20px;
   }
 
-  .contacts__container > img {
+  .contacts__container > img, .center_image {
     width: 100%;
   }
 
-  .registration__container, .support__container, .giris__container {
+  .registration__container, .support__container, .giris__container, .image__container {
     flex-direction: column;
   }
 
