--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -230,8 +230,8 @@ table:not(.bonusları__table) tr:last-of-type {
   border-left: none;
 }
 
-.test {
-  border-bottom: 3px solid pink;
+.table_container {
+  width: 100%;
 }
 
 .first-table-title {
@@ -428,6 +428,10 @@ h2, h3, h4 {
   .footer {
 		padding: 10px 20px;
 	}
+
+  .mobil__container {
+    flex-direction: column;
+  }
 
   .main {
 		margin-top: 128px;
@@ -635,4 +639,88 @@ h2, h3, h4 {
     max-width: 300px;
     min-width: 250px;
   }
+}
+
+.dropdown {
+  min-width: 15em;
+  position: relative;
+  margin-top: 16px;
+}
+
+.select {
+  background: #C625AC;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px #C625AC solid;
+  border-radius: 0.5em;
+  padding: 12px 16px;
+  cursor: pointer;
+}
+
+.selected {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.select-clicked {
+  border: 1px #FFD60E solid;
+  border-bottom: none;
+}
+
+.caret {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid #fff;
+  transition: 0.3s;
+}
+
+.caret-rotate {
+  transform: rotate(180deg);
+}
+
+.menu {
+  list-style: none;
+  border: 1px #C625AC solid;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
+  color: #9fa5b5;
+  top: 3em;
+  width: 100%;
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+  margin-top: 16px;
+}
+
+.menu li {
+  padding: 12px 16px;
+  border-radius: 0.5em;
+  cursor: pointer;
+  font-size: 15px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.menu-open {
+  display: block;
+  opacity: 1;
+  color: #fff;
+  background-color: #C625AC;
+  opacity: 0.8;
+}
+
+.dropdown__element {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+.dropdown--last {
+  margin-bottom: 93px;
 }
